--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
   "dependencies": {
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.5.0",
+    "@capacitor/filesystem": "^5.1.4",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@maplibre/maplibre-gl-leaflet": "^0.0.20",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
